@@ -134,6 +134,9 @@ Changelog
 
 - Fix javascript order in ExtJS profile.
   [jone]
+- Implement grid config profiles for ExtJS.
+  Can be enabled with `grid_config_profiles = False` on a listing test.
+  [jone]
 
 - ExtJS: Allow providing static HTML before update(), which is not
   overridden as long it is not managed by default.
